--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     <script>
 var userChoice = "";
         // User choice
-while (userChoice != 'Q'){
-        userChoice = prompt("Do you choose rock, paper or scissors? Type Q to quit");
+while (userChoice != '1'){
+        userChoice = prompt("Do you choose rock, paper or scissors? Type 1 to quit");
 
 
 
@@ -55,7 +55,7 @@ while (userChoice != 'Q'){
 
         var computerChoice = 100*Math.random();
 
-        if (computerChoice < 30 {
+        if (computerChoice < 30) {
 
             computerChoice = "rock";
 
